# pocs

./: .gitignore  ARTICLE.md  Cargo.toml  Dockerfile  MILESTONE_DELIVERY.md  README.md  TESTING-GUIDE.md  YELLOWPAPER.md  alpha-testing.md  article.md  clean.sh  contracts  developer-guide.md  docker-compose.yml  index.html  master.sh  pocs.sh  run.sh  sample.md  test.sh  testing-report.md
.github/workflows/: cargodoc.yml  contracts_build.yml  doc.yml  node_build.yml  rust.yml  test_results.xml  validate_tests.py
alpha/: README.md
benchmarks/: rocksdb_weights.rs
formal-spec/: README.md
ink-contracts/: README.md  e2e_test.sh  test.sh
ink-contracts/chain_extensions/delegate/: Cargo.toml  delegate_to.contract  lib.rs
ink-contracts/chain_extensions/delegate_at/: Cargo.toml  delegate_at.contract  lib.rs
ink-contracts/chain_extensions/delegate_to/: delegate_to.contract  lib.rs
ink-contracts/chain_extensions/reputation/: Cargo.toml  environment.rs  lib.rs  reputation.contract
ink-contracts/chain_extensions/stake_score/: Cargo.toml  lib.rs  stake_score.contract
ink-contracts/contracts/: delegate_at.contract  delegate_to.contract  flipper.contract  reputation.contract  simple_caller.contract  stake_score.contract
ink-contracts/contracts-bundle/: delegate_at.contract  delegate_registry.contract  delegate_to.contract  flipper.contract  owner.contract  reputation.contract  simple_caller.contract  stake_score.contract  update_delegate.contract
ink-contracts/delegate_at/: Cargo.toml  lib.rs  test.sh
ink-contracts/delegate_registry/: Cargo.toml  delegate_registry.contract  lib.rs
ink-contracts/delegate_to/: Cargo.toml  lib.rs
ink-contracts/extras/flipper/: Cargo.toml  flipper.contract  lib.rs
ink-contracts/extras/simple_caller/: Cargo.toml  caller.contract  lib.rs  simple_caller.contract
ink-contracts/flipper/: Cargo.toml  lib.rs
ink-contracts/owner/: Cargo.toml  lib.rs
ink-contracts/reputation/: Cargo.toml  lib.rs
ink-contracts/simple_caller/: Cargo.toml  lib.rs
ink-contracts/stake_score/: Cargo.toml
ink-contracts/update_delegate/: Cargo.toml  lib.rs
litepaper/: LICENSE  README.md  pocs-litepaper.tex
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/contracts/: Cargo.toml
pallets/contracts/fixtures/: crypto_hashes.wat  validator_reward_contract.wat
pallets/contracts/primitives/: Cargo.toml
pallets/contracts/proc-macro/src/: lib.rs
pallets/contracts/src/: chain_extension.rs  data_vex8.rs  exec.rs  gasstakeinfo.rs  lib.rs  schedule.rs  stake.rs  storage.rs  tests.rs  weights.rs
pallets/contracts/src/benchmarking/: code.rs  mod.rs
pallets/contracts/src/migration/: v10.rs  v12.rs  v9.rs
pallets/contracts/src/stake/: chain_ext.rs  mod.rs
pallets/contracts/src/wasm/: mod.rs  prepare.rs
pallets/nomination-pools/: Cargo.toml
pallets/nomination-pools/benchmarking/: Cargo.toml
pallets/nomination-pools/benchmarking/src/: lib.rs
pallets/nomination-pools/fuzzer/: Cargo.toml
pallets/nomination-pools/runtime-api/: Cargo.toml
pallets/offences/benchmarking/src/: lib.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/src/: benchmarking.rs  mock.rs  testing_utils.rs  tests.rs
pallets/staking/src/pallet/: mod.rs
research-model/: .gitignore  README.md  pocs-research.tex
research-model/simulation/: README.md  attack_tx.py  block_number_gas_sum.py  combine_parquet.py  contracts_filter.py  contracts_tx_index.py  filter_columns.py  gas_sum.py  inequality_distribution.py  merge_attack_tx.py  network_stake_supply_chart.py  parquet_folder_to_csv.py  pip-install.txt  projects_ethereum_pocs_charts.py  projects_ethereum_pocs_csv.py  reputation_counter.py  reputation_prepare.py  stakescore_csv.py  transaction_fee_addition.py  transaction_fee_sum_range.py  tx_filter.py  tx_filter_contracts.py  tx_range_index.py
research-model/simulation/miscellaneous/: csv_folder_to_parquet.py  parquet_to_csv.py
runtime/: Cargo.toml
runtime/src/: lib.rs
solo-substrate-chain/: .gitignore  README.md  docker-compose.yml  setup.sh
solo-substrate-chain/.github/workflows/: build.yml
solo-substrate-chain/node/src/: command.rs  rpc.rs
solo-substrate-chain/pallets/contracts/fixtures/: validator_reward_contract1.wasm
solo-substrate-chain/pallets/contracts/src/: exec.rs  gas.rs  lib.rs  migration.rs  tests.rs  weights-update.rs  weights.rs
solo-substrate-chain/pallets/contracts/src/benchmarking/: mod.rs
solo-substrate-chain/pallets/contracts/src/migration/: v10.rs  v11.rs
solo-substrate-chain/pallets/contracts/src/stake/: chain_ext.rs  mod.rs
solo-substrate-chain/pallets/contracts/src/storage/: meter.rs
solo-substrate-chain/pallets/contracts/src/wasm/: mod.rs  prepare.rs  runtime.rs
solo-substrate-chain/pallets/nomination-pools/src/: mock.rs
solo-substrate-chain/pallets/nomination-pools/test-staking/: Cargo.toml
solo-substrate-chain/pallets/offences/: Cargo.toml
solo-substrate-chain/pallets/offences/benchmarking/: Cargo.toml
solo-substrate-chain/pallets/offences/benchmarking/src/: lib.rs
solo-substrate-chain/pallets/staking/: Cargo.toml
solo-substrate-chain/pallets/staking/reward-curve/: Cargo.toml
solo-substrate-chain/pallets/staking/runtime-api/: Cargo.toml
solo-substrate-chain/pallets/staking/src/: benchmarking.rs  testing_utils.rs  tests.rs
solo-substrate-chain/pallets/staking/src/pallet/: mod.rs
solo-substrate-chain/primitives/: Cargo.toml
solo-substrate-chain/primitives/src/: lib.rs
solo-substrate-chain/runtime/: Cargo.toml
solo-substrate-chain/runtime/src/: lib.rs
specification/: README.md  pocs-spec.tex
tests/: test.json  test_results.txt  validate_tests.py
