[package]
name = "flipper"
version = "0.1.0"
authors = ["Auguth Research Foundation"]
edition = "2021"
license = "MIT"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

[lib]
name = "flipper"
path = "lib.rs"
