[package]
name = "simple_caller"
version = "0.1.0"
authors = ["Auguth Research Foundation"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
ink_prelude = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]

[lib]
name = "simple_caller"
path = "lib.rs"

