[package]
name = "update_delegate"
version = "0.1.0"
authors = ["Auguth Research Foundation"]
edition = "2021"
license = "MIT"

[dependencies]
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
flipper = { path = "../flipper", default-features = false, features = ["ink-as-dependency"]}  # Ensure flipper is no_std compatible

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "flipper/std",
]

[lib]
name = "update_delegate"
path = "lib.rs"
