[package]
name = "stake_score"
version = "0.1.0"
authors = ["Auguth Research Foundation"]
edition = "2021"
license = "MIT"

[dependencies]
# Ink! dependencies
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
]

[lib]
name = "stake_score"
path = "lib.rs"

