[package]
name = "pallet-offences-benchmarking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME offences pallet benchmarking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
frame-support = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
frame-system = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-babe = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-grandpa = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-im-online = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-offences = { version = "4.0.0-dev", default-features = false,path = ".." }
pallet-session = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-staking = { version = "4.0.0-dev", default-features = false, path = "../../staking"}
sp-runtime = { version = "24.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
sp-staking = { version = "4.0.0-dev", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
sp-std = { version = "8.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
log = { version = "0.4.17", default-features = false }

[dev-dependencies]
pallet-staking-reward-curve = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }
pallet-timestamp = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { version = "23.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0"  }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-staking/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"log/std",
]

runtime-benchmarks = [
	"pallet-staking/runtime-benchmarks",
]
